Overhaul of the sort feature